--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -257,6 +257,9 @@ dependencies {
 
     implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.0.0"
 
+    implementation 'com.firebaseui:firebase-ui-auth:7.2.0'
+
+
     debugImplementation("com.facebook.flipper:flipper:${FLIPPER_VERSION}") {
         exclude group:'com.facebook.fbjni'
     }
